# captcha_rust

./: Cargo.toml  README.md  cliff.toml  deny.toml
examples/: gen_captcha.rs
src/: basic_data.rs  global_fn.rs  lib.rs
