[package]
name = "captcha_rust"
version = "0.1.4"
edition = "2018"
authors = [
    "Cheng SANFA <1322484007@qq.com>",
    "DavidHsiang <davidhsiang524@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/DavidHSiang/captcha_rust"
license = "MIT"
homepage = "https://github.com/DavidHSiang/captcha_rust"
documentation = "https://github.com/DavidHSiang/captcha_rust/blob/main/README.md"
keywords = ["captcha_rust", "captcha"]
description = "Dynamically generate verification code pictures"

[dependencies]
rand = "0.8.5"
image = "0.25.4"
base64 = "0.22.1"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
